# raqeeb-AI-drone-defense

./: .gitignore  README.md  ctx.txt  drone_d.mov  drone_defense_analysis_20260503_021653.json  pyproject.toml
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_track_linking.py  0003_track_thumbnail.py  0004_bilingual_names.py  0005_track_alarm_fired.py  0006_track_outcome.py
backend/app/: __init__.py  main.py
backend/app/api/: admin.py  analysis.py  areas.py  attacks.py  cameras.py  chatbot.py  deps.py  detections.py  predictions.py  stream.py  video_stream.py
backend/app/core/: config.py  db.py  logging.py  security.py
backend/app/models/: __init__.py  attack.py  camera.py  detection.py  model_prediction.py  sensitive_area.py  track.py
backend/app/schemas/: area.py  attack.py  camera.py  chat.py  detection.py  prediction.py
backend/app/services/: alarms.py  anthropic_llm.py  chatbot.py  classifier.py  cross_camera.py  eta.py  forecaster.py  gemini_llm.py  geo.py  inference.py  local_llm.py  moondream.py  path.py  places.py  synthetic.py
backend/app/streaming/: frame_bus.py  pi_client.py
backend/app/workers/: pipeline.py
backend/seed/: generate_synthetic.py  load_history_csv.py  rebalance_attack_types.py  split_mixed_attacks.py
backend/tests/: test_geo.py  test_synthetic.py
data/raw/: final_processed_history.csv  sdb_log_full.json
data/synthetic/: synthetic_attacks.csv
docs/: API.md  DB_SCHEMA.md  DEMO_CHECKLIST.md  PROJECT_PLAN.md  SETUP.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/public/: alarm-readme.txt
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AdminSignInButton.tsx  AlarmBanner.tsx  CountUp.tsx  DroneMap.tsx  DroneViewer.tsx  LanguageToggle.tsx  (+6 more)
ml/: evaluate.py  train_classifier.py  train_forecaster.py
ml/artifacts/: risk_clf.joblib
ml/shared/: feature_engineering.py
scripts/: bytetrack_drone.yaml  bytetrack_drone_recorded.yaml  pi_streamer.py  reset_db.ps1  start_dev.ps1
(+26 files in other folders)
